<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_agua"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andres.calculadordeservicios.agua"
    android:background="#c10099cc">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:background="@android:color/holo_blue_dark">


            <TextView
                android:text="@string/titulo_agua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/textView2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/background_light" />

            <TextView
                android:text="@string/personas_de_la_casa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:id="@+id/textView4"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:layout_below="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:textColor="@android:color/background_light" />

            <CheckBox
                android:text="@string/pagan_un_mes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="95dp"
                android:id="@+id/pagoUnMesP1"
                android:hint="@string/pagan_un_mes"
                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.CheckBox"
                android:layout_below="@+id/textView4"
                android:layout_alignRight="@+id/textView4"
                android:layout_alignEnd="@+id/textView4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText"
                android:hint="@string/primer_piso"
                android:layout_alignTop="@+id/pagoUnMesP1"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_toLeftOf="@+id/pagoUnMesP1"
                android:layout_toStartOf="@+id/pagoUnMesP1" />

            <TextView
                android:text="@string/personas_del_primer_piso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_marginTop="37dp"
                android:layout_alignRight="@+id/textView4"
                android:layout_alignEnd="@+id/textView4"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textColor="@android:color/background_light" />

            <TextView
                android:text="@string/personas_del_segundo_piso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_marginTop="21dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textColor="@android:color/background_light"
                android:layout_below="@+id/editText"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignStart="@+id/editText"
                android:layout_alignRight="@+id/pagoUnMesP1"
                android:layout_alignEnd="@+id/pagoUnMesP1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_below="@+id/textView9"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignStart="@+id/textView9"
                android:layout_marginTop="41dp"
                tools:text="@string/Segundo_piso"
                android:layout_toStartOf="@+id/pagoUnMesP2"
                android:layout_alignRight="@+id/editText"
                android:layout_alignEnd="@+id/editText"
                android:hint="@string/Segundo_piso" />

            <CheckBox
                android:text="@string/pagan_un_mes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pagoUnMesP2"
                android:layout_alignTop="@+id/editText2"
                android:layout_toRightOf="@+id/editText"
                android:layout_alignRight="@+id/pagoUnMesP1"
                android:layout_alignEnd="@+id/pagoUnMesP1" />

            <TextView
                android:text="@string/personas_del_tercero_piso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:layout_marginTop="240dp"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignStart="@+id/editText2"
                android:layout_alignRight="@+id/pagoUnMesP2"
                android:layout_alignEnd="@+id/pagoUnMesP2"
                android:textColor="@android:color/background_light" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText3"
                android:text="@string/tercer_piso"
                android:layout_alignTop="@+id/pagoUnMesP1"
                android:layout_marginTop="268dp"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignStart="@+id/textView11"
                android:layout_alignRight="@+id/editText2"
                android:layout_alignEnd="@+id/editText2"
                android:hint="@string/tercer_piso" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pagoUnMesP3"
                tools:text="@string/pagan_un_mes"
                android:layout_alignTop="@+id/editText3"
                android:layout_toRightOf="@+id/editText3"
                android:layout_toEndOf="@+id/editText3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/ValorDelRecibo"
                tools:text="@string/valor_recibo"
                android:layout_below="@+id/editText3"
                android:layout_alignLeft="@+id/editText3"
                android:layout_alignStart="@+id/editText3"
                android:layout_marginTop="30dp"
                android:layout_alignRight="@+id/pagoUnMesP3"
                android:layout_alignEnd="@+id/pagoUnMesP3"
                android:hint="@string/valor_recibo" />

            <Button
                android:text="@string/calcular_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:textColor="@android:color/background_light"
                android:background="@android:color/holo_blue_light"
                android:layout_below="@+id/ValorDelRecibo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="19dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>